Criado através do Colab

--- a/perceptron_diabetes.ipynb
+++ b/perceptron_diabetes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOd2tUzDtR5VJye/AzH/rIn",
+      "authorship_tag": "ABX9TyMRifKjyCbLAwrp0ISRydbs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "gi_3IspNft_p"
       },
-      "execution_count": null,
+      "execution_count": 179,
       "outputs": []
     },
     {
@@ -107,9 +107,9 @@
           "height": 206
         },
         "id": "s6ODTxwfScUP",
-        "outputId": "25fb67ba-142b-47a7-bd10-6eb55642341f"
+        "outputId": "30b95aef-1759-45a5-e422-9ae204681dfd"
       },
-      "execution_count": null,
+      "execution_count": 180,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,7 +131,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f28e9fce-d866-4563-b162-66f129ca6256\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b21fff09-ac81-47c7-82f8-dffe5b52a466\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -252,7 +252,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f28e9fce-d866-4563-b162-66f129ca6256')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b21fff09-ac81-47c7-82f8-dffe5b52a466')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -304,12 +304,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f28e9fce-d866-4563-b162-66f129ca6256 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b21fff09-ac81-47c7-82f8-dffe5b52a466 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f28e9fce-d866-4563-b162-66f129ca6256');\n",
+              "        const element = document.querySelector('#df-b21fff09-ac81-47c7-82f8-dffe5b52a466');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -329,8 +329,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-5af089c3-68ac-4735-93b1-c80ee4901d09\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5af089c3-68ac-4735-93b1-c80ee4901d09')\"\n",
+              "    <div id=\"df-6277371f-7583-44c9-ad4f-f3daff9b8305\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6277371f-7583-44c9-ad4f-f3daff9b8305')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -449,7 +449,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-5af089c3-68ac-4735-93b1-c80ee4901d09 button');\n",
+              "            document.querySelector('#df-6277371f-7583-44c9-ad4f-f3daff9b8305 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -466,7 +466,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 162
+          "execution_count": 180
         }
       ]
     },
@@ -482,9 +482,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gnclHiQ06-VR",
-        "outputId": "52a16235-b37f-4348-cf47-a1a6dee01aff"
+        "outputId": "e9cc0020-fe54-4076-addb-7b2e57fdc738"
       },
-      "execution_count": null,
+      "execution_count": 181,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,9 +521,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TazdyqNNOXoo",
-        "outputId": "56460ead-3cbd-435c-8633-dfffcb2d6a4d"
+        "outputId": "0bb51115-24a3-4eea-d9cb-d5ea7d0022b7"
       },
-      "execution_count": null,
+      "execution_count": 182,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,9 +574,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YrGCd2itVLQs",
-        "outputId": "ecbfb8ef-f2b9-46b2-fa70-510ee4ad4f3e"
+        "outputId": "48099cc8-38db-4868-d7e4-d4cd5bc415b0"
       },
-      "execution_count": null,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "stream",
@@ -622,9 +622,9 @@
           "height": 206
         },
         "id": "4jMy-E5zViob",
-        "outputId": "2174bd35-7786-459f-fc08-bb12ab04b993"
+        "outputId": "195ccad6-8bc7-4ded-f7a5-ecb9791f2511"
       },
-      "execution_count": null,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +646,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-04269027-c133-4388-b559-10fa747ab471\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-dc6ae789-085a-4576-b489-8dfd8d7c644d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -767,7 +767,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-04269027-c133-4388-b559-10fa747ab471')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc6ae789-085a-4576-b489-8dfd8d7c644d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -819,12 +819,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-04269027-c133-4388-b559-10fa747ab471 button.colab-df-convert');\n",
+              "        document.querySelector('#df-dc6ae789-085a-4576-b489-8dfd8d7c644d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-04269027-c133-4388-b559-10fa747ab471');\n",
+              "        const element = document.querySelector('#df-dc6ae789-085a-4576-b489-8dfd8d7c644d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -844,8 +844,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-a3e65b2d-a457-466c-82c4-9f11a79d7972\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a3e65b2d-a457-466c-82c4-9f11a79d7972')\"\n",
+              "    <div id=\"df-94dbdd0d-5233-444d-a876-fdf87ef00cde\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-94dbdd0d-5233-444d-a876-fdf87ef00cde')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -964,7 +964,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-a3e65b2d-a457-466c-82c4-9f11a79d7972 button');\n",
+              "            document.querySelector('#df-94dbdd0d-5233-444d-a876-fdf87ef00cde button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -981,7 +981,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 166
+          "execution_count": 184
         }
       ]
     },
@@ -995,9 +995,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NlGHDs-QXEl3",
-        "outputId": "9715fcfd-e603-448e-c2a4-cebc56b05de1"
+        "outputId": "10704f3e-8cc0-4d45-a3fe-a3af96f5f6bf"
       },
-      "execution_count": null,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "stream",
@@ -1058,9 +1058,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "074f8e3d-34e7-4158-9e0f-554a17d1f997"
+        "outputId": "70f51be4-c1e3-407b-b0fa-85a29283ecbd"
       },
-      "execution_count": null,
+      "execution_count": 186,
       "outputs": [
         {
           "output_type": "stream",
@@ -1108,79 +1108,18 @@
         "# Selecionar features relevantes\n",
         "features = [\"HbA1c\", \"BMI\", \"TG\", \"AGE\"]\n",
         "X = x[features].values.T\n",
-        "Y = y.values.flatten()\n",
-        "\n",
-        "Y"
+        "Y = y.values.flatten()"
       ],
       "metadata": {
-        "id": "Ajpq3NyHYuwB",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3d35d121-7c66-40c9-a577-d5009a318f6b"
+        "id": "Ajpq3NyHYuwB"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-              "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-              "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-              "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-              "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-              "       1])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 169
-        }
-      ]
+      "execution_count": 187,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "\n",
-        "## --- Separar treino (60%), validação (20%) e teste (20%) ---\n",
+        "## --- TREINAMENTO ---\n",
         "<p>Como sklearn separa por linha, precisamos fazer um \"transpose\" para facilitar"
       ],
       "metadata": {
@@ -1216,7 +1155,7 @@
       "metadata": {
         "id": "1hMBgdot-YBg"
       },
-      "execution_count": null,
+      "execution_count": 188,
       "outputs": []
     },
     {
@@ -1242,7 +1181,7 @@
       "metadata": {
         "id": "_mX9btBrY6cd"
       },
-      "execution_count": null,
+      "execution_count": 189,
       "outputs": []
     },
     {
@@ -1287,29 +1226,8 @@
       "metadata": {
         "id": "Zy3IEDDfOZDA"
       },
-      "execution_count": null,
+      "execution_count": 190,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "w_inicial = np.zeros((X_train_bias.shape[0], 1))\n",
-        "w_final, atualizacoes = treinar_perceptron(X_train_bias, y_train, w_inicial, eta=0.01, max_iter=5000)\n"
-      ],
-      "metadata": {
-        "id": "6XIuU7BVY9Zd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#Analisando resultados"
-      ],
-      "metadata": {
-        "id": "geoFV7BCZb1Z"
-      }
     },
     {
       "cell_type": "code",
@@ -1331,10 +1249,31 @@
         "    return y_pred"
       ],
       "metadata": {
-        "id": "mw01eGlUY-p8"
+        "id": "VpX0LA6FJA_-"
       },
-      "execution_count": null,
+      "execution_count": 191,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w_inicial = np.zeros((X_train_bias.shape[0], 1))\n",
+        "w_final, atualizacoes = treinar_perceptron(X_train_bias, y_train, w_inicial, eta=0.01, max_iter=5000)\n"
+      ],
+      "metadata": {
+        "id": "6XIuU7BVY9Zd"
+      },
+      "execution_count": 192,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Analisando resultados"
+      ],
+      "metadata": {
+        "id": "geoFV7BCZb1Z"
+      }
     },
     {
       "cell_type": "code",
@@ -1348,9 +1287,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KdW1an3WZnFq",
-        "outputId": "5e6d37fd-943a-43d7-bd1e-5c78af159a63"
+        "outputId": "d718b65d-3563-405a-8e44-24fc2475633a"
       },
-      "execution_count": null,
+      "execution_count": 193,
       "outputs": [
         {
           "output_type": "stream",
@@ -1371,15 +1310,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "#Análise dos Resultados"
-      ],
-      "metadata": {
-        "id": "s2Dl2xT9_L69"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# Matriz de Confusão Perceptron\n",
@@ -1396,9 +1326,9 @@
           "height": 472
         },
         "id": "odiHOAt6_Mlu",
-        "outputId": "c1037367-480d-46ce-890e-342e2c429b78"
+        "outputId": "b064fe25-6f8a-4898-903f-ca336012db59"
       },
-      "execution_count": null,
+      "execution_count": 194,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1425,9 +1355,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KDsEy5xW_MjL",
-        "outputId": "26610017-76c3-42f8-bb95-62a930db847e"
+        "outputId": "06860c65-2db1-4c69-eed3-85e475d4299e"
       },
-      "execution_count": null,
+      "execution_count": 195,
       "outputs": [
         {
           "output_type": "stream",
